# update-github-issue

./: .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: pre_release.yml
src/: github.rs  index.ts  main.rs
src/command/: create.ts  help.ts  update.ts
src/github/: github_issue.rs  github_repo.rs
src/lib/: args.ts  base64.ts  env.ts  logger.ts  types.ts
src/lib/checker/: github_issue.ts
src/lib/github/: create_issue.ts  get_repository.ts  graphql.ts  update_issue.ts
src/lib/zenhub/: add_epic.ts  common.ts  get_board.ts  move_pipeline.ts  update_issue.ts
src/subcommand/: board.rs
src/util/: config.rs  select.rs
src/zenhub/: mod.rs  workspace.rs  zenhub_api.rs  zenhub_issue.rs
